--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>double_sundae</title>
+    <title>Double Sundae</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="Home">
+      
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
