--- a/Double Sundae/index.html
+++ b/Double Sundae/index.html
@@ -7,9 +7,6 @@
 
     <link rel="stylesheet" href="style.css">
     <style>
-div.first {
-  opacity: 0.1;
-}
       body {
         background-image: url('https://cdn.discordapp.com/attachments/774828320046317600/840327903048368158/DOUBLE_SUNDAE_2.png');
       }
@@ -62,4 +59,9 @@ div.first {
 
     <script src="./script.js"></script>
   </body>
+  <footer>
+    <a href="./about.html">About</a>
+    <a href="./support.html">Support</a> 
+    <a href="./contact.html">Contact</a>   
+  </footer>
 </html>
