--- a/Double Sundae/contact.html
+++ b/Double Sundae/contact.html
@@ -33,7 +33,7 @@
     </h1>
       <p class="thicker">
           <br> <br> <br> <br> <br> <br> <br>
-          sundaexsundae@gmail.com - Double Sundae's author
+          sundaexsundae@gmail.com - Double Sundae's author, the author is a very busy man and might take between ~1 to ~99999 days to answer your request, feel free to send another email to satisfy your impatience if you feel like it.
         </p> 
   </body>
 <footer>
